// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generator - spring-boot addTestSpringFactory should add a test spring factory 1`] = `
{
  "src/test/resources/META-INF/spring.factories": {
    "contents": "key = first.value,second.value",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-boot source api editJavaFile with springBeans should match file content snapshot 1`] = `
{
  "src/main/java/com/mycompany/myapp/config/ApplicationProperties.java": {
    "contents": "package com.mycompany.myapp.config;

import org.springframework.boot.context.properties.ConfigurationProperties;

/**
 * Properties specific to JHipster.
 * <p>
 * Properties are configured in the {@code application.yml} file.
 * See {@link tech.jhipster.config.JHipsterProperties} for a good example.
 */
@ConfigurationProperties(prefix = "application", ignoreUnknownFields = false)
public class ApplicationProperties {
    private final SomeNestedProperties someNestedProperties = new SomeNestedProperties();
    private final Liquibase liquibase = new Liquibase();
    // jhipster-needle-application-properties-property

    public SomeNestedProperties getSomeNestedProperties() {
        return someNestedProperties;
    }

    public Liquibase getLiquibase() {
        return liquibase;
    }

    // jhipster-needle-application-properties-property-getter

    public static class SomeNestedProperties {

        private Boolean enabled = true;

        private String tag;

        public Boolean getEnabled() {
            return enabled;
        }


        public String getTag() {
            return tag;
        }


        public void setEnabled(Boolean enabled) {
            this.enabled = enabled;
        }

        public void setTag(String tag) {
            this.tag = tag;
        }
    }

    public static class Liquibase {

        private Boolean asyncStart = true;

        public Boolean getAsyncStart() {
            return asyncStart;
        }


        public void setAsyncStart(Boolean asyncStart) {
            this.asyncStart = asyncStart;
        }
    }

    // jhipster-needle-application-properties-property-class
}
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-boot with jwt should match application snapshot 1`] = `
{
  "addLanguageCallbacks": Any<Array>,
  "addOpenapiGeneratorPlugin": true,
  "addSpringMilestoneRepository": false,
  "additionalSubGenerators": undefined,
  "anyEntityHasRelationshipWithUser": false,
  "applicationType": "monolith",
  "applicationTypeAny": true,
  "applicationTypeGateway": false,
  "applicationTypeMicroservice": false,
  "applicationTypeMonolith": true,
  "appsFolders": undefined,
  "authenticationType": "jwt",
  "authenticationTypeAny": true,
  "authenticationTypeJwt": true,
  "authenticationTypeOauth2": false,
  "authenticationTypeSession": false,
  "authenticationTypeUsesRemoteAuthorization": false,
  "authenticationUsesCsrf": false,
  "authority": Any<Object>,
  "autoCrlf": undefined,
  "backendType": "Java",
  "backendTypeJavaAny": true,
  "backendTypeSpringBoot": true,
  "baseName": "jhipster",
  "buildTool": "maven",
  "buildToolAny": true,
  "buildToolExecutable": "mvnw",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "cacheProvider": "ehcache",
  "cacheProviderAny": true,
  "cacheProviderCaffeine": false,
  "cacheProviderEhcache": true,
  "cacheProviderHazelcast": false,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": false,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "caret": undefined,
  "cli": undefined,
  "cliName": undefined,
  "clientBundler": "esbuild",
  "clientBundlerAny": true,
  "clientBundlerEsbuild": true,
  "clientBundlerVite": false,
  "clientBundlerWebpack": false,
  "clientDistDir": "target/classes/static/",
  "clientFramework": "angular",
  "clientFrameworkAngular": true,
  "clientFrameworkAny": true,
  "clientFrameworkNo": false,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageJsonScripts": {},
  "clientRootDir": "",
  "clientSrcDir": "src/main/webapp/",
  "clientTestFramework": undefined,
  "clientTestFrameworkAny": false,
  "clientTestFrameworkJest": false,
  "clientTestFrameworkVitest": false,
  "clientTestFrameworks": undefined,
  "clientTestFrameworksAny": false,
  "clientTestFrameworksCypress": false,
  "clientTheme": "none",
  "clientThemeVariant": undefined,
  "clientThemeVariantAny": false,
  "clientThemeVariantDark": false,
  "clientThemeVariantLight": false,
  "clientThemeVariantPrimary": false,
  "communicationSpringWebsocket": false,
  "creationTimestamp": 1577836800000,
  "customizeTemplatePaths": [],
  "cypressAudit": undefined,
  "cypressCoverage": undefined,
  "dasherizedBaseName": "jhipster",
  "databaseMigration": "liquibase",
  "databaseMigrationAny": true,
  "databaseMigrationLiquibase": true,
  "databaseMigrationNo": false,
  "databaseType": "sql",
  "databaseTypeAny": true,
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMongodb": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypeSql": true,
  "defaultEnvironment": undefined,
  "defaultEnvironmentAny": false,
  "defaultEnvironmentDev": false,
  "defaultEnvironmentProd": false,
  "defaultPackaging": "jar",
  "defaultPackagingAny": true,
  "defaultPackagingJar": true,
  "defaultPackagingWar": false,
  "devDatabasePassword": undefined,
  "devDatabaseType": "postgresql",
  "devDatabaseTypeAny": true,
  "devDatabaseTypeH2Any": false,
  "devDatabaseTypeH2Disk": false,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgresql": true,
  "devDatabaseUsername": undefined,
  "devJdbcUrl": undefined,
  "devServerPort": 4200,
  "devServerPortProxy": undefined,
  "dockerContainers": {
    "apache/kafka-native": "apache-kafka-native-placeholder",
    "apachepulsar/pulsar": "apachepulsar-pulsar-placeholder",
    "cassandra": "cassandra-placeholder",
    "cassandraImage": "cassandra-image-placeholder",
    "cassandraTag": "cassandra-tag-placeholder",
    "consul": "consul-placeholder",
    "consulConfigLoader": "consul-config-loader-placeholder",
    "consulConfigLoaderImage": "consul-config-loader-image-placeholder",
    "consulConfigLoaderTag": "consul-config-loader-tag-placeholder",
    "consulImage": "consul-image-placeholder",
    "consulTag": "consul-tag-placeholder",
    "couchbase": "couchbase-placeholder",
    "couchbase/server": "couchbase-server-placeholder",
    "couchbaseImage": "couchbase-image-placeholder",
    "couchbaseTag": "couchbase-tag-placeholder",
    "eclipse-temurin": "eclipse-temurin-placeholder",
    "eclipseTemurin": "eclipse-temurin-placeholder",
    "eclipseTemurinImage": "eclipse-temurin-image-placeholder",
    "eclipseTemurinTag": "eclipse-temurin-tag-placeholder",
    "elasticsearch": "elasticsearch-placeholder",
    "elasticsearchImage": "elasticsearch-image-placeholder",
    "elasticsearchTag": "elasticsearch-tag-placeholder",
    "grafana": "grafana-placeholder",
    "grafana/grafana": "grafana-grafana-placeholder",
    "grafanaImage": "grafana-image-placeholder",
    "grafanaTag": "grafana-tag-placeholder",
    "grafanaWatcher": "grafana-watcher-placeholder",
    "grafanaWatcherImage": "grafana-watcher-image-placeholder",
    "grafanaWatcherTag": "grafana-watcher-tag-placeholder",
    "hashicorp/consul": "hashicorp-consul-placeholder",
    "hazelcast": "hazelcast-placeholder",
    "hazelcast/management-center": "hazelcast-management-center-placeholder",
    "hazelcastImage": "hazelcast-image-placeholder",
    "hazelcastTag": "hazelcast-tag-placeholder",
    "javaJre": "java-jre-placeholder",
    "javaJreImage": "java-jre-image-placeholder",
    "javaJreTag": "java-jre-tag-placeholder",
    "jenkins": "jenkins-placeholder",
    "jenkins/jenkins": "jenkins-jenkins-placeholder",
    "jenkinsImage": "jenkins-image-placeholder",
    "jenkinsTag": "jenkins-tag-placeholder",
    "jhipster/consul-config-loader": "jhipster-consul-config-loader-placeholder",
    "jhipster/jhipster-control-center": "jhipster-jhipster-control-center-placeholder",
    "jhipster/jhipster-registry": "jhipster-jhipster-registry-placeholder",
    "jhipsterControlCenter": "jhipster-control-center-placeholder",
    "jhipsterControlCenterImage": "jhipster-control-center-image-placeholder",
    "jhipsterControlCenterTag": "jhipster-control-center-tag-placeholder",
    "jhipsterRegistry": "jhipster-registry-placeholder",
    "jhipsterRegistryImage": "jhipster-registry-image-placeholder",
    "jhipsterRegistryTag": "jhipster-registry-tag-placeholder",
    "kafka": "kafka-placeholder",
    "kafkaImage": "kafka-image-placeholder",
    "kafkaTag": "kafka-tag-placeholder",
    "keycloak": "keycloak-placeholder",
    "keycloakImage": "keycloak-image-placeholder",
    "keycloakTag": "keycloak-tag-placeholder",
    "mariadb": "mariadb-placeholder",
    "mariadbImage": "mariadb-image-placeholder",
    "mariadbTag": "mariadb-tag-placeholder",
    "mcr.microsoft.com/mssql/server": "mcr-microsoft-com-mssql-server-placeholder",
    "memcached": "memcached-placeholder",
    "memcachedImage": "memcached-image-placeholder",
    "memcachedTag": "memcached-tag-placeholder",
    "mongo": "mongo-placeholder",
    "mongoImage": "mongo-image-placeholder",
    "mongoTag": "mongo-tag-placeholder",
    "mongodb": "mongodb-placeholder",
    "mongodbImage": "mongodb-image-placeholder",
    "mongodbTag": "mongodb-tag-placeholder",
    "mssql": "mssql-placeholder",
    "mssqlImage": "mssql-image-placeholder",
    "mssqlTag": "mssql-tag-placeholder",
    "mysql": "mysql-placeholder",
    "mysqlImage": "mysql-image-placeholder",
    "mysqlTag": "mysql-tag-placeholder",
    "neo4J": "neo-4-j-placeholder",
    "neo4JImage": "neo-4-j-image-placeholder",
    "neo4JTag": "neo-4-j-tag-placeholder",
    "neo4j": "neo-4-j-placeholder",
    "openzipkin/zipkin": "openzipkin-zipkin-placeholder",
    "postgres": "postgres-placeholder",
    "postgresImage": "postgres-image-placeholder",
    "postgresTag": "postgres-tag-placeholder",
    "postgresql": "postgresql-placeholder",
    "postgresqlImage": "postgresql-image-placeholder",
    "postgresqlTag": "postgresql-tag-placeholder",
    "prom/alertmanager": "prom-alertmanager-placeholder",
    "prom/prometheus": "prom-prometheus-placeholder",
    "prometheus": "prometheus-placeholder",
    "prometheusAlertmanager": "prometheus-alertmanager-placeholder",
    "prometheusAlertmanagerImage": "prometheus-alertmanager-image-placeholder",
    "prometheusAlertmanagerTag": "prometheus-alertmanager-tag-placeholder",
    "prometheusImage": "prometheus-image-placeholder",
    "prometheusOperator": "prometheus-operator-placeholder",
    "prometheusOperatorImage": "prometheus-operator-image-placeholder",
    "prometheusOperatorTag": "prometheus-operator-tag-placeholder",
    "prometheusTag": "prometheus-tag-placeholder",
    "pulsar": "pulsar-placeholder",
    "pulsarImage": "pulsar-image-placeholder",
    "pulsarTag": "pulsar-tag-placeholder",
    "quay.io/coreos/grafana-watcher": "quay-io-coreos-grafana-watcher-placeholder",
    "quay.io/coreos/prometheus-operator": "quay-io-coreos-prometheus-operator-placeholder",
    "quay.io/keycloak/keycloak": "quay-io-keycloak-keycloak-placeholder",
    "redis": "redis-placeholder",
    "redisImage": "redis-image-placeholder",
    "redisTag": "redis-tag-placeholder",
    "sonar": "sonar-placeholder",
    "sonarImage": "sonar-image-placeholder",
    "sonarTag": "sonar-tag-placeholder",
    "sonarqube": "sonarqube-placeholder",
    "sonarqubeImage": "sonarqube-image-placeholder",
    "sonarqubeTag": "sonarqube-tag-placeholder",
    "swaggerEditor": "swagger-editor-placeholder",
    "swaggerEditorImage": "swagger-editor-image-placeholder",
    "swaggerEditorTag": "swagger-editor-tag-placeholder",
    "swaggerapi/swagger-editor": "swaggerapi-swagger-editor-placeholder",
    "zipkin": "zipkin-placeholder",
    "zipkinImage": "zipkin-image-placeholder",
    "zipkinTag": "zipkin-tag-placeholder",
  },
  "dockerServicesDir": "src/main/docker/",
  "documentationArchiveUrl": "https://www.jhipster.tech/documentation-archive/vJHIPSTER_VERSION",
  "domains": [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "dynamic": undefined,
  "emptyOrReactive": "",
  "enableGradleDevelocity": undefined,
  "enableHibernateCache": true,
  "enableI18nRTL": false,
  "enableSwaggerCodegen": false,
  "enableTranslation": true,
  "endpointPrefix": "",
  "entityPackages": [
    "com.mycompany.myapp",
  ],
  "entitySuffix": "",
  "feignClient": false,
  "gatewayRoutes": undefined,
  "gatewayServerPort": undefined,
  "generateAuthenticationApi": true,
  "generateBuiltInAuthorityEntity": true,
  "generateBuiltInUserEntity": true,
  "generateInMemoryUserCredentials": false,
  "generateSpringAuditor": true,
  "generateUserManagement": true,
  "githubRepository": undefined,
  "githubWorkflows": undefined,
  "graalvmReachabilityMetadata": "GRAALVM_REACHABILITY_METADATA_VERSION",
  "graalvmSupport": undefined,
  "gradleDevelocityHost": undefined,
  "hasNonBuiltInEntity": false,
  "hibernateNamingImplicitStrategy": "org.springframework.boot.hibernate.SpringImplicitNamingStrategy",
  "hibernateNamingPhysicalStrategy": "org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy",
  "hipster": "jhipster_family_member_3",
  "hipsterBugTrackerLink": "https://github.com/jhipster/generator-jhipster/issues?state=open",
  "hipsterBugTrackerProductName": "JHipster",
  "hipsterChatLink": "https://gitter.im/jhipster/generator-jhipster",
  "hipsterChatProductName": "JHipster",
  "hipsterDocumentationLink": "https://www.jhipster.tech/",
  "hipsterHomePageProductName": "JHipster",
  "hipsterName": "Java Hipster",
  "hipsterProductName": "JHipster",
  "hipsterProjectLink": "https://github.com/jhipster/generator-jhipster",
  "hipsterStackOverflowProductName": "JHipster",
  "hipsterStackoverflowLink": "https://stackoverflow.com/tags/jhipster/info",
  "hipsterTwitterLink": "https://twitter.com/jhipster",
  "hipsterTwitterUsername": "@jhipster",
  "humanizedBaseName": "JHipster",
  "imperativeOrReactive": "imperative",
  "incrementalChangelog": undefined,
  "javaCompatibleVersions": [
    "17",
    "21",
    "25",
  ],
  "javaDependencies": {
    "archunit-junit5": "'ARCHUNIT-JUNIT-5-VERSION'",
    "blockhound-junit-platform": "'BLOCKHOUND-JUNIT-PLATFORM-VERSION'",
    "checkstyle": "'CHECKSTYLE-VERSION'",
    "checksum-maven-plugin": "'CHECKSUM-MAVEN-PLUGIN-VERSION'",
    "common-custom-user-data-gradle-plugin": "'COMMON-CUSTOM-USER-DATA-GRADLE-PLUGIN-VERSION'",
    "commons-beanutils": "'COMMONS-BEANUTILS-VERSION'",
    "couchmove": "'COUCHMOVE-VERSION'",
    "cucumber-bom": "'CUCUMBER-BOM-VERSION'",
    "feign-reactor-bom": "'FEIGN-REACTOR-BOM-VERSION'",
    "frontend-maven-plugin": "'FRONTEND-MAVEN-PLUGIN-VERSION'",
    "gatling": "'GATLING-VERSION'",
    "gatling-gradle": "'GATLING-GRADLE-VERSION'",
    "gatling-maven-plugin": "'GATLING-MAVEN-PLUGIN-VERSION'",
    "gradle-develocity": "'GRADLE-DEVELOCITY-VERSION'",
    "gradle-git-properties": "'GRADLE-GIT-PROPERTIES-VERSION'",
    "gradle-jib": "'GRADLE-JIB-VERSION'",
    "gradle-liquibase": "'GRADLE-LIQUIBASE-VERSION'",
    "gradle-modernizer-plugin": "'GRADLE-MODERNIZER-PLUGIN-VERSION'",
    "gradle-openapi-generator": "'GRADLE-OPENAPI-GENERATOR-VERSION'",
    "gradle-sonarqube": "'GRADLE-SONARQUBE-VERSION'",
    "jackson-databind-nullable": "'JACKSON-DATABIND-NULLABLE-VERSION'",
    "jacoco-maven-plugin": "'JACOCO-MAVEN-PLUGIN-VERSION'",
    "jhipster-dependabot": "'JHIPSTER-DEPENDABOT-VERSION'",
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "jib-spring-boot-extension-maven": "'JIB-SPRING-BOOT-EXTENSION-MAVEN-VERSION'",
    "lifecycle-mapping": "'LIFECYCLE-MAPPING-VERSION'",
    "lz4-java": "'LZ-4-JAVA-VERSION'",
    "mapstruct": "'MAPSTRUCT-VERSION'",
    "maven-antrun-plugin": "'MAVEN-ANTRUN-PLUGIN-VERSION'",
    "maven-checkstyle-plugin": "'MAVEN-CHECKSTYLE-PLUGIN-VERSION'",
    "micrometer-context-propagation": "'MICROMETER-CONTEXT-PROPAGATION-VERSION'",
    "modernizer-maven-plugin": "'MODERNIZER-MAVEN-PLUGIN-VERSION'",
    "mongock-bom": "'MONGOCK-BOM-VERSION'",
    "neo4j-migrations-spring-boot-starter": "'NEO-4-J-MIGRATIONS-SPRING-BOOT-STARTER-VERSION'",
    "node-gradle": "'NODE-GRADLE-VERSION'",
    "nohttp-checkstyle": "'NOHTTP-CHECKSTYLE-VERSION'",
    "openapi-generator-maven-plugin": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
    "picocli": "'PICOCLI-VERSION'",
    "properties-maven-plugin": "'PROPERTIES-MAVEN-PLUGIN-VERSION'",
    "sonar-maven-plugin": "'SONAR-MAVEN-PLUGIN-VERSION'",
    "spotless-gradle-plugin": "'SPOTLESS-GRADLE-PLUGIN-VERSION'",
    "spotless-maven-plugin": "'SPOTLESS-MAVEN-PLUGIN-VERSION'",
    "spring-cloud-dependencies": "'SPRING-CLOUD-DEPENDENCIES-VERSION'",
    "springdoc": "'SPRINGDOC-VERSION'",
  },
  "javaIntegrationTestExclude": [],
  "javaManagedProperties": {},
  "javaNodeBuildPaths": [],
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "javaProperties": {},
  "javaVersion": "JAVA_VERSION",
  "jdlStore": undefined,
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterDependenciesVersion": "JHIPSTER_DEPENDENCIES_VERSION",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "JHIPSTER_VERSION",
  "js": undefined,
  "jwtSecretKey": Any<String>,
  "languages": [],
  "languagesDefinition": [],
  "languagesToGenerate": undefined,
  "languagesToGenerateDefinition": undefined,
  "listOrFlux": "List",
  "listOrFluxClassPath": "java.util.List",
  "localBlueprint": undefined,
  "loginRegex": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "messageBroker": "no",
  "messageBrokerAny": false,
  "messageBrokerKafka": false,
  "messageBrokerNo": true,
  "messageBrokerPulsar": false,
  "microfrontend": false,
  "microfrontends": undefined,
  "monorepository": undefined,
  "nativeLanguage": "en",
  "nativeLanguageDefinition": {
    "angularLocale": "en",
    "dayjsLocale": "en",
    "displayName": "English",
    "fakerjsLocale": "en",
    "javaLocaleMessageSourceSuffix": "en",
    "languageTag": "en",
    "name": "English",
    "rtl": false,
  },
  "nodeDependencies": {
    "concurrently": "CONCURRENTLY_VERSION",
    "eslint-config-prettier": "ESLINT_CONFIG_PRETTIER_VERSION",
    "eslint-plugin-prettier": "ESLINT_PLUGIN_PRETTIER_VERSION",
    "husky": "HUSKY_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "npm": "NPM_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "wait-on": "WAIT_ON_VERSION",
  },
  "nodePackageManager": "npm",
  "nodePackageManagerCommand": "./npmw",
  "nodeVersion": "NODE_VERSION",
  "optionalOrMono": "Optional",
  "optionalOrMonoClassPath": "java.util.Optional",
  "optionalOrMonoOfNullable": "Optional.ofNullable",
  "packageFolder": "com/mycompany/myapp/",
  "packageInfoJavadocs": [
    {
      "documentation": "Logging aspect.",
      "packageName": "com.mycompany.myapp.aop.logging",
    },
    {
      "documentation": "Application management.",
      "packageName": "com.mycompany.myapp.management",
    },
    {
      "documentation": "Webflux database column mapper.",
      "packageName": "com.mycompany.myapp.repository.rowmapper",
    },
    {
      "documentation": "Application security utilities.",
      "packageName": "com.mycompany.myapp.security",
    },
    {
      "documentation": "Data transfer objects for rest mapping.",
      "packageName": "com.mycompany.myapp.service.dto",
    },
    {
      "documentation": "Data transfer objects mappers.",
      "packageName": "com.mycompany.myapp.service.mapper",
    },
    {
      "documentation": "Request chain filters.",
      "packageName": "com.mycompany.myapp.web.filter",
    },
    {
      "documentation": "Rest layer error handling.",
      "packageName": "com.mycompany.myapp.web.rest.errors",
    },
    {
      "documentation": "Rest layer visual models.",
      "packageName": "com.mycompany.myapp.web.rest.vm",
    },
  ],
  "packageJsonNodeEngine": undefined,
  "packageJsonScripts": {},
  "packageName": "com.mycompany.myapp",
  "pkType": undefined,
  "prettierExtensions": [
    "md",
    "json",
    "yml",
    "js",
    "cjs",
    "mjs",
    "ts",
    "cts",
    "mts",
    "java",
  ],
  "prettierFolders": [
    "",
    ".blueprint/**/",
    "src/**/",
  ],
  "prettierTabWidth": undefined,
  "prodDatabasePassword": undefined,
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeAny": true,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgresql": true,
  "prodDatabaseUsername": undefined,
  "prodJdbcUrl": undefined,
  "projectDescription": "Description for JHipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "reactive": false,
  "reactorBlock": "",
  "reactorBlockOptional": "",
  "rememberMeKey": undefined,
  "removeNeedles": undefined,
  "requiresDeleteAllUsers": false,
  "routes": undefined,
  "sampleWritten": undefined,
  "searchEngine": "no",
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "searchEngineNo": true,
  "serverPort": 8080,
  "serviceDiscovery": "no",
  "serviceDiscoveryAny": false,
  "serviceDiscoveryConsul": false,
  "serviceDiscoveryEureka": false,
  "serviceDiscoveryNo": true,
  "serviceDiscoveryType": "no",
  "serviceDiscoveryTypeAny": false,
  "serviceDiscoveryTypeConsul": false,
  "serviceDiscoveryTypeEureka": false,
  "serviceDiscoveryTypeNo": true,
  "skipCheckLengthOfIdentifier": undefined,
  "skipClient": undefined,
  "skipCommitHook": undefined,
  "skipFakeData": undefined,
  "skipJhipsterDependencies": undefined,
  "skipServer": undefined,
  "skipUserManagement": false,
  "springBoot4": true,
  "springBootDependencies": Any<Object>,
  "springDataDescription": "Spring Data JPA",
  "srcMain": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTest": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "subGenerators": undefined,
  "supportedLanguages": Any<Array>,
  "syncUserWithIdp": false,
  "temporaryDir": "target/",
  "testFrameworks": [],
  "typescriptEslint": undefined,
  "upperFirstCamelCaseBaseName": "Jhipster",
  "useNpmWrapper": true,
  "user": Any<Object>,
  "userManagement": Any<Object>,
  "websocket": "no",
  "withAdminUi": true,
  "withGeneratedFlag": false,
  "wrapMono": [Function],
}
`;

exports[`generator - spring-boot with jwt should match generated files snapshot 1`] = `
{
  ".devcontainer/Dockerfile": {
    "stateCleared": "modified",
  },
  ".devcontainer/devcontainer.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/ApplicationWebXml.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/JhipsterApp.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/aop/logging/LoggingAspect.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ApplicationProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/AsyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CRLFLogConverter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/DateTimeFormatConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JacksonConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingAspectConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/SecurityConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/StaticResourcesWebConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/WebConfigurer.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/AbstractAuditingEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/User.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/UserRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/DomainUserDetailsService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityUtils.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SpringSecurityAuditorAware.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UserNotActivatedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/InvalidPasswordException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UserService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UsernameAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/AdminUserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/PasswordChangeDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/UserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/UserMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/filter/SpaWebFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AuthorityResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/PublicUserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslator.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/InvalidPasswordException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/LoginAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/KeyAndPasswordVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ManagedUserVM.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/banner.txt": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-dev.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-prod.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-tls.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/tls/keystore.p12": {
    "stateCleared": "modified",
  },
  "src/main/resources/logback-spring.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/error.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/activationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/creationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/passwordResetEmail.html": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/IntegrationTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/TechnicalStructureTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/AsyncSyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/CRLFLogConverterTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/SpringBootTestClassOrderer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/StaticResourcesWebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTestSamples.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/DomainUserDetailsServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityUtilsUnitTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/MailServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/UserServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/mapper/UserMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/filter/SpaWebFilterIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AuthorityResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/PublicUserResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/WithUnauthenticatedMockUser.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/junit-platform.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/logback.xml": {
    "stateCleared": "modified",
  },
  "src/test/resources/templates/mail/activationEmail.html": {
    "stateCleared": "modified",
  },
  "src/test/resources/templates/mail/creationEmail.html": {
    "stateCleared": "modified",
  },
  "src/test/resources/templates/mail/passwordResetEmail.html": {
    "stateCleared": "modified",
  },
  "src/test/resources/templates/mail/testEmail.html": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-boot with oauth2 should match application snapshot 1`] = `
{
  "addLanguageCallbacks": Any<Array>,
  "addOpenapiGeneratorPlugin": true,
  "addSpringMilestoneRepository": false,
  "additionalSubGenerators": undefined,
  "anyEntityHasRelationshipWithUser": false,
  "applicationType": "monolith",
  "applicationTypeAny": true,
  "applicationTypeGateway": false,
  "applicationTypeMicroservice": false,
  "applicationTypeMonolith": true,
  "appsFolders": undefined,
  "authenticationType": "oauth2",
  "authenticationTypeAny": true,
  "authenticationTypeJwt": false,
  "authenticationTypeOauth2": true,
  "authenticationTypeSession": false,
  "authenticationTypeUsesRemoteAuthorization": true,
  "authenticationUsesCsrf": true,
  "autoCrlf": undefined,
  "backendType": "Java",
  "backendTypeJavaAny": true,
  "backendTypeSpringBoot": true,
  "baseName": "jhipster",
  "buildTool": "maven",
  "buildToolAny": true,
  "buildToolExecutable": "mvnw",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "cacheProvider": "ehcache",
  "cacheProviderAny": true,
  "cacheProviderCaffeine": false,
  "cacheProviderEhcache": true,
  "cacheProviderHazelcast": false,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": false,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "caret": undefined,
  "cli": undefined,
  "cliName": undefined,
  "clientBundler": "esbuild",
  "clientBundlerAny": true,
  "clientBundlerEsbuild": true,
  "clientBundlerVite": false,
  "clientBundlerWebpack": false,
  "clientDistDir": "target/classes/static/",
  "clientFramework": "angular",
  "clientFrameworkAngular": true,
  "clientFrameworkAny": true,
  "clientFrameworkNo": false,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageJsonScripts": {},
  "clientRootDir": "",
  "clientSrcDir": "src/main/webapp/",
  "clientTestFramework": undefined,
  "clientTestFrameworkAny": false,
  "clientTestFrameworkJest": false,
  "clientTestFrameworkVitest": false,
  "clientTestFrameworks": undefined,
  "clientTestFrameworksAny": false,
  "clientTestFrameworksCypress": false,
  "clientTheme": "none",
  "clientThemeVariant": undefined,
  "clientThemeVariantAny": false,
  "clientThemeVariantDark": false,
  "clientThemeVariantLight": false,
  "clientThemeVariantPrimary": false,
  "communicationSpringWebsocket": false,
  "creationTimestamp": 1577836800000,
  "customizeTemplatePaths": [],
  "cypressAudit": undefined,
  "cypressCoverage": undefined,
  "dasherizedBaseName": "jhipster",
  "databaseMigration": "liquibase",
  "databaseMigrationAny": true,
  "databaseMigrationLiquibase": true,
  "databaseMigrationNo": false,
  "databaseType": "sql",
  "databaseTypeAny": true,
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMongodb": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypeSql": true,
  "defaultEnvironment": undefined,
  "defaultEnvironmentAny": false,
  "defaultEnvironmentDev": false,
  "defaultEnvironmentProd": false,
  "defaultPackaging": "jar",
  "defaultPackagingAny": true,
  "defaultPackagingJar": true,
  "defaultPackagingWar": false,
  "devDatabasePassword": undefined,
  "devDatabaseType": "postgresql",
  "devDatabaseTypeAny": true,
  "devDatabaseTypeH2Any": false,
  "devDatabaseTypeH2Disk": false,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgresql": true,
  "devDatabaseUsername": undefined,
  "devJdbcUrl": undefined,
  "devServerPort": 4200,
  "devServerPortProxy": undefined,
  "dockerContainers": {
    "apache/kafka-native": "apache-kafka-native-placeholder",
    "apachepulsar/pulsar": "apachepulsar-pulsar-placeholder",
    "cassandra": "cassandra-placeholder",
    "cassandraImage": "cassandra-image-placeholder",
    "cassandraTag": "cassandra-tag-placeholder",
    "consul": "consul-placeholder",
    "consulConfigLoader": "consul-config-loader-placeholder",
    "consulConfigLoaderImage": "consul-config-loader-image-placeholder",
    "consulConfigLoaderTag": "consul-config-loader-tag-placeholder",
    "consulImage": "consul-image-placeholder",
    "consulTag": "consul-tag-placeholder",
    "couchbase": "couchbase-placeholder",
    "couchbase/server": "couchbase-server-placeholder",
    "couchbaseImage": "couchbase-image-placeholder",
    "couchbaseTag": "couchbase-tag-placeholder",
    "eclipse-temurin": "eclipse-temurin-placeholder",
    "eclipseTemurin": "eclipse-temurin-placeholder",
    "eclipseTemurinImage": "eclipse-temurin-image-placeholder",
    "eclipseTemurinTag": "eclipse-temurin-tag-placeholder",
    "elasticsearch": "elasticsearch-placeholder",
    "elasticsearchImage": "elasticsearch-image-placeholder",
    "elasticsearchTag": "elasticsearch-tag-placeholder",
    "grafana": "grafana-placeholder",
    "grafana/grafana": "grafana-grafana-placeholder",
    "grafanaImage": "grafana-image-placeholder",
    "grafanaTag": "grafana-tag-placeholder",
    "grafanaWatcher": "grafana-watcher-placeholder",
    "grafanaWatcherImage": "grafana-watcher-image-placeholder",
    "grafanaWatcherTag": "grafana-watcher-tag-placeholder",
    "hashicorp/consul": "hashicorp-consul-placeholder",
    "hazelcast": "hazelcast-placeholder",
    "hazelcast/management-center": "hazelcast-management-center-placeholder",
    "hazelcastImage": "hazelcast-image-placeholder",
    "hazelcastTag": "hazelcast-tag-placeholder",
    "javaJre": "java-jre-placeholder",
    "javaJreImage": "java-jre-image-placeholder",
    "javaJreTag": "java-jre-tag-placeholder",
    "jenkins": "jenkins-placeholder",
    "jenkins/jenkins": "jenkins-jenkins-placeholder",
    "jenkinsImage": "jenkins-image-placeholder",
    "jenkinsTag": "jenkins-tag-placeholder",
    "jhipster/consul-config-loader": "jhipster-consul-config-loader-placeholder",
    "jhipster/jhipster-control-center": "jhipster-jhipster-control-center-placeholder",
    "jhipster/jhipster-registry": "jhipster-jhipster-registry-placeholder",
    "jhipsterControlCenter": "jhipster-control-center-placeholder",
    "jhipsterControlCenterImage": "jhipster-control-center-image-placeholder",
    "jhipsterControlCenterTag": "jhipster-control-center-tag-placeholder",
    "jhipsterRegistry": "jhipster-registry-placeholder",
    "jhipsterRegistryImage": "jhipster-registry-image-placeholder",
    "jhipsterRegistryTag": "jhipster-registry-tag-placeholder",
    "kafka": "kafka-placeholder",
    "kafkaImage": "kafka-image-placeholder",
    "kafkaTag": "kafka-tag-placeholder",
    "keycloak": "keycloak-placeholder",
    "keycloakImage": "keycloak-image-placeholder",
    "keycloakTag": "keycloak-tag-placeholder",
    "mariadb": "mariadb-placeholder",
    "mariadbImage": "mariadb-image-placeholder",
    "mariadbTag": "mariadb-tag-placeholder",
    "mcr.microsoft.com/mssql/server": "mcr-microsoft-com-mssql-server-placeholder",
    "memcached": "memcached-placeholder",
    "memcachedImage": "memcached-image-placeholder",
    "memcachedTag": "memcached-tag-placeholder",
    "mongo": "mongo-placeholder",
    "mongoImage": "mongo-image-placeholder",
    "mongoTag": "mongo-tag-placeholder",
    "mongodb": "mongodb-placeholder",
    "mongodbImage": "mongodb-image-placeholder",
    "mongodbTag": "mongodb-tag-placeholder",
    "mssql": "mssql-placeholder",
    "mssqlImage": "mssql-image-placeholder",
    "mssqlTag": "mssql-tag-placeholder",
    "mysql": "mysql-placeholder",
    "mysqlImage": "mysql-image-placeholder",
    "mysqlTag": "mysql-tag-placeholder",
    "neo4J": "neo-4-j-placeholder",
    "neo4JImage": "neo-4-j-image-placeholder",
    "neo4JTag": "neo-4-j-tag-placeholder",
    "neo4j": "neo-4-j-placeholder",
    "openzipkin/zipkin": "openzipkin-zipkin-placeholder",
    "postgres": "postgres-placeholder",
    "postgresImage": "postgres-image-placeholder",
    "postgresTag": "postgres-tag-placeholder",
    "postgresql": "postgresql-placeholder",
    "postgresqlImage": "postgresql-image-placeholder",
    "postgresqlTag": "postgresql-tag-placeholder",
    "prom/alertmanager": "prom-alertmanager-placeholder",
    "prom/prometheus": "prom-prometheus-placeholder",
    "prometheus": "prometheus-placeholder",
    "prometheusAlertmanager": "prometheus-alertmanager-placeholder",
    "prometheusAlertmanagerImage": "prometheus-alertmanager-image-placeholder",
    "prometheusAlertmanagerTag": "prometheus-alertmanager-tag-placeholder",
    "prometheusImage": "prometheus-image-placeholder",
    "prometheusOperator": "prometheus-operator-placeholder",
    "prometheusOperatorImage": "prometheus-operator-image-placeholder",
    "prometheusOperatorTag": "prometheus-operator-tag-placeholder",
    "prometheusTag": "prometheus-tag-placeholder",
    "pulsar": "pulsar-placeholder",
    "pulsarImage": "pulsar-image-placeholder",
    "pulsarTag": "pulsar-tag-placeholder",
    "quay.io/coreos/grafana-watcher": "quay-io-coreos-grafana-watcher-placeholder",
    "quay.io/coreos/prometheus-operator": "quay-io-coreos-prometheus-operator-placeholder",
    "quay.io/keycloak/keycloak": "quay-io-keycloak-keycloak-placeholder",
    "redis": "redis-placeholder",
    "redisImage": "redis-image-placeholder",
    "redisTag": "redis-tag-placeholder",
    "sonar": "sonar-placeholder",
    "sonarImage": "sonar-image-placeholder",
    "sonarTag": "sonar-tag-placeholder",
    "sonarqube": "sonarqube-placeholder",
    "sonarqubeImage": "sonarqube-image-placeholder",
    "sonarqubeTag": "sonarqube-tag-placeholder",
    "swaggerEditor": "swagger-editor-placeholder",
    "swaggerEditorImage": "swagger-editor-image-placeholder",
    "swaggerEditorTag": "swagger-editor-tag-placeholder",
    "swaggerapi/swagger-editor": "swaggerapi-swagger-editor-placeholder",
    "zipkin": "zipkin-placeholder",
    "zipkinImage": "zipkin-image-placeholder",
    "zipkinTag": "zipkin-tag-placeholder",
  },
  "dockerServicesDir": "src/main/docker/",
  "documentationArchiveUrl": "https://www.jhipster.tech/documentation-archive/vJHIPSTER_VERSION",
  "domains": [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "dynamic": undefined,
  "emptyOrReactive": "",
  "enableGradleDevelocity": undefined,
  "enableHibernateCache": true,
  "enableI18nRTL": false,
  "enableSwaggerCodegen": false,
  "enableTranslation": true,
  "endpointPrefix": "",
  "entityPackages": [
    "com.mycompany.myapp",
  ],
  "entitySuffix": "",
  "feignClient": false,
  "gatewayRoutes": undefined,
  "gatewayServerPort": undefined,
  "generateAuthenticationApi": true,
  "generateBuiltInAuthorityEntity": false,
  "generateBuiltInUserEntity": false,
  "generateInMemoryUserCredentials": false,
  "generateSpringAuditor": true,
  "generateUserManagement": false,
  "githubRepository": undefined,
  "githubWorkflows": undefined,
  "graalvmReachabilityMetadata": "GRAALVM_REACHABILITY_METADATA_VERSION",
  "graalvmSupport": undefined,
  "gradleDevelocityHost": undefined,
  "hasNonBuiltInEntity": false,
  "hibernateNamingImplicitStrategy": "org.springframework.boot.hibernate.SpringImplicitNamingStrategy",
  "hibernateNamingPhysicalStrategy": "org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy",
  "hipster": "jhipster_family_member_3",
  "hipsterBugTrackerLink": "https://github.com/jhipster/generator-jhipster/issues?state=open",
  "hipsterBugTrackerProductName": "JHipster",
  "hipsterChatLink": "https://gitter.im/jhipster/generator-jhipster",
  "hipsterChatProductName": "JHipster",
  "hipsterDocumentationLink": "https://www.jhipster.tech/",
  "hipsterHomePageProductName": "JHipster",
  "hipsterName": "Java Hipster",
  "hipsterProductName": "JHipster",
  "hipsterProjectLink": "https://github.com/jhipster/generator-jhipster",
  "hipsterStackOverflowProductName": "JHipster",
  "hipsterStackoverflowLink": "https://stackoverflow.com/tags/jhipster/info",
  "hipsterTwitterLink": "https://twitter.com/jhipster",
  "hipsterTwitterUsername": "@jhipster",
  "humanizedBaseName": "JHipster",
  "imperativeOrReactive": "imperative",
  "incrementalChangelog": undefined,
  "javaCompatibleVersions": [
    "17",
    "21",
    "25",
  ],
  "javaDependencies": {
    "archunit-junit5": "'ARCHUNIT-JUNIT-5-VERSION'",
    "blockhound-junit-platform": "'BLOCKHOUND-JUNIT-PLATFORM-VERSION'",
    "checkstyle": "'CHECKSTYLE-VERSION'",
    "checksum-maven-plugin": "'CHECKSUM-MAVEN-PLUGIN-VERSION'",
    "common-custom-user-data-gradle-plugin": "'COMMON-CUSTOM-USER-DATA-GRADLE-PLUGIN-VERSION'",
    "commons-beanutils": "'COMMONS-BEANUTILS-VERSION'",
    "couchmove": "'COUCHMOVE-VERSION'",
    "cucumber-bom": "'CUCUMBER-BOM-VERSION'",
    "feign-reactor-bom": "'FEIGN-REACTOR-BOM-VERSION'",
    "frontend-maven-plugin": "'FRONTEND-MAVEN-PLUGIN-VERSION'",
    "gatling": "'GATLING-VERSION'",
    "gatling-gradle": "'GATLING-GRADLE-VERSION'",
    "gatling-maven-plugin": "'GATLING-MAVEN-PLUGIN-VERSION'",
    "gradle-develocity": "'GRADLE-DEVELOCITY-VERSION'",
    "gradle-git-properties": "'GRADLE-GIT-PROPERTIES-VERSION'",
    "gradle-jib": "'GRADLE-JIB-VERSION'",
    "gradle-liquibase": "'GRADLE-LIQUIBASE-VERSION'",
    "gradle-modernizer-plugin": "'GRADLE-MODERNIZER-PLUGIN-VERSION'",
    "gradle-openapi-generator": "'GRADLE-OPENAPI-GENERATOR-VERSION'",
    "gradle-sonarqube": "'GRADLE-SONARQUBE-VERSION'",
    "jackson-databind-nullable": "'JACKSON-DATABIND-NULLABLE-VERSION'",
    "jacoco-maven-plugin": "'JACOCO-MAVEN-PLUGIN-VERSION'",
    "jhipster-dependabot": "'JHIPSTER-DEPENDABOT-VERSION'",
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "jib-spring-boot-extension-maven": "'JIB-SPRING-BOOT-EXTENSION-MAVEN-VERSION'",
    "lifecycle-mapping": "'LIFECYCLE-MAPPING-VERSION'",
    "lz4-java": "'LZ-4-JAVA-VERSION'",
    "mapstruct": "'MAPSTRUCT-VERSION'",
    "maven-antrun-plugin": "'MAVEN-ANTRUN-PLUGIN-VERSION'",
    "maven-checkstyle-plugin": "'MAVEN-CHECKSTYLE-PLUGIN-VERSION'",
    "micrometer-context-propagation": "'MICROMETER-CONTEXT-PROPAGATION-VERSION'",
    "modernizer-maven-plugin": "'MODERNIZER-MAVEN-PLUGIN-VERSION'",
    "mongock-bom": "'MONGOCK-BOM-VERSION'",
    "neo4j-migrations-spring-boot-starter": "'NEO-4-J-MIGRATIONS-SPRING-BOOT-STARTER-VERSION'",
    "node-gradle": "'NODE-GRADLE-VERSION'",
    "nohttp-checkstyle": "'NOHTTP-CHECKSTYLE-VERSION'",
    "openapi-generator-maven-plugin": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
    "picocli": "'PICOCLI-VERSION'",
    "properties-maven-plugin": "'PROPERTIES-MAVEN-PLUGIN-VERSION'",
    "sonar-maven-plugin": "'SONAR-MAVEN-PLUGIN-VERSION'",
    "spotless-gradle-plugin": "'SPOTLESS-GRADLE-PLUGIN-VERSION'",
    "spotless-maven-plugin": "'SPOTLESS-MAVEN-PLUGIN-VERSION'",
    "spring-cloud-dependencies": "'SPRING-CLOUD-DEPENDENCIES-VERSION'",
    "springdoc": "'SPRINGDOC-VERSION'",
  },
  "javaIntegrationTestExclude": [],
  "javaManagedProperties": {},
  "javaNodeBuildPaths": [],
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "javaProperties": {},
  "javaVersion": "JAVA_VERSION",
  "jdlStore": undefined,
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterDependenciesVersion": "JHIPSTER_DEPENDENCIES_VERSION",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "JHIPSTER_VERSION",
  "js": undefined,
  "jwtSecretKey": undefined,
  "languages": [],
  "languagesDefinition": [],
  "languagesToGenerate": undefined,
  "languagesToGenerateDefinition": undefined,
  "listOrFlux": "List",
  "listOrFluxClassPath": "java.util.List",
  "localBlueprint": undefined,
  "loginRegex": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "messageBroker": "no",
  "messageBrokerAny": false,
  "messageBrokerKafka": false,
  "messageBrokerNo": true,
  "messageBrokerPulsar": false,
  "microfrontend": false,
  "microfrontends": undefined,
  "monorepository": undefined,
  "nativeLanguage": "en",
  "nativeLanguageDefinition": {
    "angularLocale": "en",
    "dayjsLocale": "en",
    "displayName": "English",
    "fakerjsLocale": "en",
    "javaLocaleMessageSourceSuffix": "en",
    "languageTag": "en",
    "name": "English",
    "rtl": false,
  },
  "nodeDependencies": {
    "concurrently": "CONCURRENTLY_VERSION",
    "eslint-config-prettier": "ESLINT_CONFIG_PRETTIER_VERSION",
    "eslint-plugin-prettier": "ESLINT_PLUGIN_PRETTIER_VERSION",
    "husky": "HUSKY_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "npm": "NPM_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "wait-on": "WAIT_ON_VERSION",
  },
  "nodePackageManager": "npm",
  "nodePackageManagerCommand": "./npmw",
  "nodeVersion": "NODE_VERSION",
  "optionalOrMono": "Optional",
  "optionalOrMonoClassPath": "java.util.Optional",
  "optionalOrMonoOfNullable": "Optional.ofNullable",
  "packageFolder": "com/mycompany/myapp/",
  "packageInfoJavadocs": [
    {
      "documentation": "Logging aspect.",
      "packageName": "com.mycompany.myapp.aop.logging",
    },
    {
      "documentation": "Application management.",
      "packageName": "com.mycompany.myapp.management",
    },
    {
      "documentation": "Webflux database column mapper.",
      "packageName": "com.mycompany.myapp.repository.rowmapper",
    },
    {
      "documentation": "Application security utilities.",
      "packageName": "com.mycompany.myapp.security",
    },
    {
      "documentation": "Data transfer objects for rest mapping.",
      "packageName": "com.mycompany.myapp.service.dto",
    },
    {
      "documentation": "Data transfer objects mappers.",
      "packageName": "com.mycompany.myapp.service.mapper",
    },
    {
      "documentation": "Request chain filters.",
      "packageName": "com.mycompany.myapp.web.filter",
    },
    {
      "documentation": "Rest layer error handling.",
      "packageName": "com.mycompany.myapp.web.rest.errors",
    },
    {
      "documentation": "Rest layer visual models.",
      "packageName": "com.mycompany.myapp.web.rest.vm",
    },
  ],
  "packageJsonNodeEngine": undefined,
  "packageJsonScripts": {},
  "packageName": "com.mycompany.myapp",
  "pkType": undefined,
  "prettierExtensions": [
    "md",
    "json",
    "yml",
    "js",
    "cjs",
    "mjs",
    "ts",
    "cts",
    "mts",
    "java",
  ],
  "prettierFolders": [
    "",
    ".blueprint/**/",
    "src/**/",
  ],
  "prettierTabWidth": undefined,
  "prodDatabasePassword": undefined,
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeAny": true,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgresql": true,
  "prodDatabaseUsername": undefined,
  "prodJdbcUrl": undefined,
  "projectDescription": "Description for JHipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "reactive": false,
  "reactorBlock": "",
  "reactorBlockOptional": "",
  "rememberMeKey": undefined,
  "removeNeedles": undefined,
  "requiresDeleteAllUsers": true,
  "routes": undefined,
  "sampleWritten": undefined,
  "searchEngine": "no",
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "searchEngineNo": true,
  "serverPort": 8080,
  "serviceDiscovery": "no",
  "serviceDiscoveryAny": false,
  "serviceDiscoveryConsul": false,
  "serviceDiscoveryEureka": false,
  "serviceDiscoveryNo": true,
  "serviceDiscoveryType": "no",
  "serviceDiscoveryTypeAny": false,
  "serviceDiscoveryTypeConsul": false,
  "serviceDiscoveryTypeEureka": false,
  "serviceDiscoveryTypeNo": true,
  "skipCheckLengthOfIdentifier": undefined,
  "skipClient": undefined,
  "skipCommitHook": undefined,
  "skipFakeData": undefined,
  "skipJhipsterDependencies": undefined,
  "skipServer": undefined,
  "skipUserManagement": true,
  "springBoot4": true,
  "springBootDependencies": Any<Object>,
  "springDataDescription": "Spring Data JPA",
  "srcMain": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTest": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "subGenerators": undefined,
  "supportedLanguages": Any<Array>,
  "syncUserWithIdp": false,
  "temporaryDir": "target/",
  "testFrameworks": [],
  "typescriptEslint": undefined,
  "upperFirstCamelCaseBaseName": "Jhipster",
  "useNpmWrapper": true,
  "user": undefined,
  "websocket": "no",
  "withAdminUi": true,
  "withGeneratedFlag": false,
  "wrapMono": [Function],
}
`;

exports[`generator - spring-boot with oauth2 should match generated files snapshot 1`] = `
{
  ".devcontainer/Dockerfile": {
    "stateCleared": "modified",
  },
  ".devcontainer/devcontainer.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/ApplicationWebXml.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/JhipsterApp.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/aop/logging/LoggingAspect.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ApplicationProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/AsyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CRLFLogConverter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/DateTimeFormatConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JacksonConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingAspectConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/SecurityConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/StaticResourcesWebConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/WebConfigurer.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/AbstractAuditingEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityUtils.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SpringSecurityAuditorAware.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/filter/SpaWebFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslator.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/banner.txt": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-dev.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-prod.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-tls.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/tls/keystore.p12": {
    "stateCleared": "modified",
  },
  "src/main/resources/logback-spring.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/error.html": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/IntegrationTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/TechnicalStructureTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/AsyncSyncConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/CRLFLogConverterTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/SpringBootTestClassOrderer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/StaticResourcesWebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/WebConfigurerTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityUtilsUnitTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/filter/SpaWebFilterIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/WithUnauthenticatedMockUser.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/config/application.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/junit-platform.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/logback.xml": {
    "stateCleared": "modified",
  },
}
`;
